<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">GreenDaoForAndroidStudio</string>

  <string name="action_menu_add_item">Add item</string>
  <string name="action_menu_delete_items">Delete items</string>
  <string name="action_menu_test_boxdao_write">BoxDao Write</string>
  <string name="action_menu_test_boxdao_read">BoxDao Read</string>
  <string name="action_menu_test_boxdao_write_random_fixtures">BoxDao Write Random Fixtures</string>
  <string name="action_menu_settings">Settings</string>

  <string name="formater_datetime_format">yyyy-MM-dd HH:mm:ss</string>

  <!-- Organize -->

  <string name="button_save">Save</string>

  <string name="dialog_delete_items_title">Delete items</string>
  <string name="dialog_delete_items_confirm">Yes</string>
  <string name="dialog_delete_items_cancel">No</string>
  <string name="dialog_delete_items_content">Do you want to delete all items from list?</string>
  <string name="dialog_delete_item_title">Delete item</string>
  <string name="dialog_delete_item_content">Do you want to delete this item?</string>

  <string name="toast_no_items_to_delete">There are no items to delete</string>
  <string name="toast_validation_error">Validation error</string>

  <string name="tv_label_item_id">Item id: </string>
  <string name="tv_label_box_name">Box name: </string>
  <string name="tv_label_box_size">Box slots: </string>
  <string name="tv_label_box_description">Box description: </string>

  <string name="error_must_be_number">Field must be a number</string>
  <string name="error_cannot_be_empty">Field cannot be empty</string>

</resources>
