<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".BoxListActivity">

  <item
    android:id="@+id/action_menu_test_boxdao_write"
    android:title="@string/action_menu_test_boxdao_write"
    android:orderInCategory="100"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_test_boxdao_read"
    android:title="@string/action_menu_test_boxdao_read"
    android:orderInCategory="100"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_test_boxdao_write_random_fixtures"
    android:title="@string/action_menu_test_boxdao_write_random_fixtures"
    android:orderInCategory="100"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_settings"
    android:title="@string/action_menu_settings"
    android:orderInCategory="200"
    app:showAsAction="never"/>

</menu>
